// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput.vue Test that the component show a progress bar 1`] = `
<vtextfield-stub
  append-icon="visibility_off"
  error-messages=""
  hint="This is a top-100 common password"
  id="passwordInput"
  label="Mon mot de passe"
  loading="loading"
  name="passwordInputName"
  persistent-hint="true"
  type="password"
  value="test"
>
  <vprogresslinear-stub
    active="true"
    buffervalue="100"
    color="red accent-2"
    height="3"
    slot="progress"
    value="0"
  />
</vtextfield-stub>
`;

exports[`PasswordInput.vue Test that the component show a progress bar with password afeVtj@!# 1`] = `
<vtextfield-stub
  append-icon="visibility_off"
  error-messages=""
  hint=""
  id="passwordInput"
  label="Mon mot de passe"
  loading="loading"
  name="passwordInputName"
  persistent-hint="true"
  type="password"
  value="afeVtj@!#"
>
  <vprogresslinear-stub
    active="true"
    buffervalue="100"
    color="light-green "
    height="3"
    slot="progress"
    value="75"
  />
</vtextfield-stub>
`;

exports[`PasswordInput.vue Test that the component show a progress bar with password camion tracteur 1`] = `
<vtextfield-stub
  append-icon="visibility_off"
  error-messages=""
  hint=""
  id="passwordInput"
  label="Mon mot de passe"
  loading="loading"
  name="passwordInputName"
  persistent-hint="true"
  type="password"
  value="camion tracteur"
>
  <vprogresslinear-stub
    active="true"
    buffervalue="100"
    color="green"
    height="3"
    slot="progress"
    value="100"
  />
</vtextfield-stub>
`;

exports[`PasswordInput.vue Test that the component show a progress bar with password camion tracteur2 1`] = `
<vtextfield-stub
  append-icon="visibility_off"
  error-messages=""
  hint=""
  id="passwordInput"
  label="Mon mot de passe"
  loading="loading"
  name="passwordInputName"
  persistent-hint="true"
  type="password"
  value="camion tracteur2"
>
  <vprogresslinear-stub
    active="true"
    buffervalue="100"
    color="light-green "
    height="3"
    slot="progress"
    value="75"
  />
</vtextfield-stub>
`;

exports[`PasswordInput.vue Test that the component show a progress bar with password ceci est un test 1`] = `
<vtextfield-stub
  append-icon="visibility_off"
  error-messages=""
  hint=""
  id="passwordInput"
  label="Mon mot de passe"
  loading="loading"
  name="passwordInputName"
  persistent-hint="true"
  type="password"
  value="ceci est un test"
>
  <vprogresslinear-stub
    active="true"
    buffervalue="100"
    color="green"
    height="3"
    slot="progress"
    value="100"
  />
</vtextfield-stub>
`;

exports[`PasswordInput.vue Test that the component show a progress bar with password maison 1`] = `
<vtextfield-stub
  append-icon="visibility_off"
  error-messages=""
  hint="This is a very common password"
  id="passwordInput"
  label="Mon mot de passe"
  loading="loading"
  name="passwordInputName"
  persistent-hint="true"
  type="password"
  value="maison"
>
  <vprogresslinear-stub
    active="true"
    buffervalue="100"
    color="orange"
    height="3"
    slot="progress"
    value="25"
  />
</vtextfield-stub>
`;

exports[`PasswordInput.vue Test that the component show a progress bar with password test 1`] = `
<vtextfield-stub
  append-icon="visibility_off"
  error-messages=""
  hint="This is a top-100 common password"
  id="passwordInput"
  label="Mon mot de passe"
  loading="loading"
  name="passwordInputName"
  persistent-hint="true"
  type="password"
  value="test"
>
  <vprogresslinear-stub
    active="true"
    buffervalue="100"
    color="red accent-2"
    height="3"
    slot="progress"
    value="0"
  />
</vtextfield-stub>
`;
